[package]
name = "qo-dl-rust"
version = "0.6.0"
authors = ["MJKang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.6.1"
metaflac = "0.1.6"
indicatif = "0.11.0"